Adds Docker dev container definition for Shipshape.
The container bundles all of Shipshapes build and test dependencies.
A user can set up a functional dev environment by running
    docker pull gcr.io/shipshape_releases/dev_container:prod
or
    bazel build //shipshape/dev_container
and running the resulting container.

Also modifies .travis.yml to use the dev container instead of
building its own.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,15 @@ os:
 sudo: required
 services:
   - docker
-addons:
-  apt:
-    packages:
-      - realpath
+install:
+  - docker pull gcr.io/shipshape_releases/dev_container:prod
 script:
-  - ./shipshape/test/docker/docker_run_tests.sh
+  - 'docker run 
+        --privileged 
+        --volume=$TRAVIS_BUILD_DIR:/shipshape 
+        --workdir=/shipshape 
+        gcr.io/shipshape_releases/dev_container:prod 
+        /bin/sh -c 
+            "./setup_bazel.sh && 
+             bazel build //... && 
+             bazel test --test_output=errors //..."'
